samples/_failures_safe/1761411436_4b6001_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18eb99f0.c: In function ‘main’:
./samples/SAFE/__tmp_18eb99f0.c:153:5: error: expected declaration or statement at end of input
  153 |     }
      |     ^
